--- a/JG.FinTechTest/JG.FinTechTest.csproj
+++ b/JG.FinTechTest/JG.FinTechTest.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="SwaggerClasses.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
